Add footer by using wireframe Footer C

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
     <header class="header"></header>
     <!-- /Header -->
     <!-- /Nav -->
-    <nav class="topnav"></nav>
+    <nav class="nav"></nav>
     <!-- /Nav -->
     <main class="main"></main>
     <!-- /Footer -->
