Added update to Footer C and added media components

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,11 @@
     <!-- /Nav -->
     <nav class="nav"></nav>
     <!-- /Nav -->
-    <main class="main"></main>
+    <main class="main">
+      <!-- Hero-E-->
+      <hero-e class="hero-e"></hero-e>
+      <!-- /Hero-E-->
+    </main>
     <!-- /Footer -->
     <footer class="footer"></footer>
     <!-- /Footer -->
