Added body components

--- a/app/index.html
+++ b/app/index.html
@@ -16,9 +16,17 @@
     <nav class="nav"></nav>
     <!-- /Nav -->
     <main class="main">
-      <!-- Hero-E-->
+      <!-- Hero -->
       <hero-e class="hero-e"></hero-e>
-      <!-- /Hero-E-->
+      <!-- /Hero -->
+      <!-- Body -->
+      <body-b class="body-b"></body-b>
+      <body-e class="body-e"></body-e>
+      <body-f class="body-f"></body-f>
+      <body-g class="body-g"></body-g>
+      <testimonial-body-d class="testimonial-body-d"></testimonial-body-d>
+      <body-signup-c class="body-signup-c"></body-signup-c>
+      <!-- /Body -->
     </main>
     <!-- /Footer -->
     <footer class="footer"></footer>
