REFACTOR renaming components

--- a/app/community-1.html
+++ b/app/community-1.html
@@ -17,8 +17,8 @@
     <!-- /Nav -->
     <main class="main">
       <!-- /Bobdy -->
-      <sub-page-form-1 class="sub-page-form-1"></sub-page-form-1>
-      <body-b class="body-b"></body-b>
+      <article class="internships-form-1"></article>
+      <article class="info-box"></article>
       <!-- /Bobdy -->
     </main>
     <!-- /Footer -->
