--- a/app/community.html
+++ b/app/community.html
@@ -17,8 +17,8 @@
     <!-- /Nav -->
     <main class="main">
       <!-- /Bobdy -->
-      <sub-page-form class="sub-page-form"></sub-page-form>
-      <body-b class="body-b"></body-b>
+      <article class="volunteer-form"></article>
+      <article class="info-box"></article>
       <!-- /Bobdy -->
     </main>
     <!-- /Footer -->
