--- a/app/exhibition.html
+++ b/app/exhibition.html
@@ -17,13 +17,13 @@
     <!-- /Nav -->
     <main class="main">
         <!-- /Bobdy -->
-        <sub-page-hero-x-1 class="sub-page-hero-x-1"></sub-page-hero-x-1>
-        <sub-page-body-a class="sub-page-body-a"></sub-page-body-a>
-        <sub-page-body-b class="sub-page-body-b"></sub-page-body-b>
-        <sub-page-body-f class="sub-page-body-f"></sub-page-body-f>
-        <sub-page-body-e class="sub-page-body-e"></sub-page-body-e>
-        <sub-page-body-h class="sub-page-body-h"></sub-page-body-h>
-        <body-b class="body-b"></body-b>
+        <article class="sub-page-hero-x-1"></article>
+        <article class="cosmology"></article>
+        <article class="evolution"></article>
+        <article class="ai"></article>
+        <article class="medicine"></article>
+        <article class="ecology"></article>
+        <article class="info-box"></article>
         <!-- /Bobdy -->
     </main>
     <!-- /Footer -->
