--- a/app/food_and_drink.html
+++ b/app/food_and_drink.html
@@ -17,9 +17,9 @@
     <!-- /Nav -->
     <main class="main">
         <!-- /Bobdy -->
-        <sub-shop-hero-x-2 class="sub-shop-hero-x-2"></sub-shop-hero-x-2>
-        <sub-shop-body class="sub-shop-body"></sub-shop-body>
-        <body-b class="body-b"></body-b>
+        <article class="sub-shop-hero-x-2"></article>
+        <div class="shop"></div>
+        <article class="info-box"></article>
         <!-- /Bobdy -->
     </main>
     <!-- /Footer -->
