--- a/app/help.html
+++ b/app/help.html
@@ -30,7 +30,7 @@
           >
         </div>
       </div>
-      <body-b class="body-b"></body-b>
+      <article class="info-box"></article>
       <!-- /Bobdy -->
     </main>
     <!-- /Footer -->
