--- a/app/index.html
+++ b/app/index.html
@@ -17,15 +17,15 @@
     <!-- /Nav -->
     <main class="main">
       <!-- Hero -->
-      <hero-e class="hero-e"></hero-e>
+      <div class="hero"></div>
       <!-- /Hero -->
       <!-- Body -->
-      <body-b class="body-b"></body-b>
-      <body-e class="body-e"></body-e>
-      <body-f class="body-f"></body-f>
-      <body-g class="body-g"></body-g>
-      <testimonial-body-d class="testimonial-body-d"></testimonial-body-d>
-      <body-signup-c class="body-signup-c"></body-signup-c>
+      <article class="info-box"></article>
+      <article class="explore-for-kids"></article>
+      <article class="explore-for-teachers"></article>
+      <article class="explore-for-researchers"></article>
+      <article class="testimonial"></article>
+      <article class="signup"></article>
       <!-- /Body -->
     </main>
     <!-- /Footer -->
