--- a/app/news.html
+++ b/app/news.html
@@ -17,12 +17,12 @@
     <!-- /Nav -->
     <main class="main">
         <!-- /Bobdy -->
-        <sub-page-hero-x class="sub-page-hero-x"></sub-page-hero-x>
-        <sub-page-body-g class="sub-page-body-g"></sub-page-body-g>
-        <sub-page-body-d class="sub-page-body-d"></sub-page-body-d>
-        <sub-page-body-c class="sub-page-body-c"></sub-page-body-c>
+        <article class="sub-page-hero-x"></article>
+        <article class="aeronautics"></article>
+        <article class="museum"></article>
+        <article class="loan"></article>
         <!--<sub-page-body-a class="sub-page-body-a"></sub-page-body-a>-->
-        <body-b class="body-b"></body-b>
+        <article class="info-box"></article>
         <!-- /Bobdy -->
     </main>
     <!-- /Footer -->
