--- a/app/shop.html
+++ b/app/shop.html
@@ -17,9 +17,9 @@
     <!-- /Nav -->
     <main class="main">
         <!-- /Bobdy -->
-        <sub-shop-hero-x-3 class="sub-shop-hero-x-3"></sub-shop-hero-x-3>
-        <sub-shop-body-2 class="sub-shop-body-2"></sub-shop-body-2>
-        <body-b class="body-b"></body-b>
+        <article class="sub-shop-hero-x-3"></article>
+        <div class="shop-2"></div>
+        <article class="info-box"></article>
         <!-- /Bobdy -->
     </main>
     <!-- /Footer -->
