accessibility issues, Adding fix/indicating problems for older users.

--- a/app/exhibition.html
+++ b/app/exhibition.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="" />
+    <meta name="description" content="CSM is an institution that collects, preserves, researches and exhibits works of art or other objects that are of scientific, natural history or cultural historical interest. Museums usually specialize in one or more disciplines, and have professionals with a great interest in, or with special education in, these disciplines." />
     <title>CSM | Exhibition Spaces</title>
     <link href="assets/css/main.min.css" rel="stylesheet" type="text/css" media="all" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
