--- a/app/food_and_drink.html
+++ b/app/food_and_drink.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="" />
-    <title>CSM | Food & Drink</title>
+    <meta name="description" content="Food & Drink" />
+    <title>CSM | Food & Drink, There is a café attached to the museum where you can get light lunches, soft drinks,
+      coffee, snacks and more.</title>
     <link href="assets/css/main.min.css" rel="stylesheet" type="text/css" media="all" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   </head>
