--- a/app/help.html
+++ b/app/help.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="" />
+    <meta name="description" content="Tech support" />
     <title>CSM | Communtiy</title>
     <link href="assets/css/main.min.css" rel="stylesheet" type="text/css" media="all" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
