--- a/app/community-1.html
+++ b/app/community-1.html
@@ -10,19 +10,19 @@
   </head>
   <body>
     <!-- /Header -->
-    <header class="header"></header>
+    <header role="banner" class="header"></header>
     <!-- /Header -->
     <!-- /Nav -->
-    <nav class="nav"></nav>
+    <nav role="navigation" class="nav"></nav>
     <!-- /Nav -->
-    <main class="main">
+    <main role="main" class="main">
       <!-- /Bobdy -->
       <article class="internships-form-1"></article>
       <article class="info-box"></article>
       <!-- /Bobdy -->
     </main>
     <!-- /Footer -->
-    <footer class="footer"></footer>
+    <footer role="contentinfo" class="footer"></footer>
     <!-- /Footer -->
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
