--- a/app/food_and_drink.html
+++ b/app/food_and_drink.html
@@ -11,12 +11,12 @@
   </head>
   <body>
     <!-- /Header -->
-    <header class="header"></header>
+    <header role="banner" class="header"></header>
     <!-- /Header -->
     <!-- /Nav -->
-    <nav class="nav"></nav>
+    <nav role="navigation" class="nav"></nav>
     <!-- /Nav -->
-    <main class="main">
+    <main role="main"class="main">
         <!-- /Bobdy -->
         <article class="sub-shop-hero-x-2"></article>
         <div class="shop"></div>
@@ -24,7 +24,7 @@
         <!-- /Bobdy -->
     </main>
     <!-- /Footer -->
-    <footer class="footer"></footer>
+    <footer role="contentinfo" class="footer"></footer>
     <!-- /Footer -->
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
