--- a/app/index.html
+++ b/app/index.html
@@ -10,12 +10,12 @@
   </head>
   <body>
     <!-- /Header -->
-    <header class="header"></header>
+    <header role="banner" class="header"></header>
     <!-- /Header -->
     <!-- /Nav -->
-    <nav class="nav"></nav>
+    <nav role="navigation" class="nav"></nav>
     <!-- /Nav -->
-    <main class="main">
+    <main role="main" class="main">
       <!-- Hero -->
       <div class="hero"></div>
       <!-- /Hero -->
@@ -29,7 +29,7 @@
       <!-- /Body -->
     </main>
     <!-- /Footer -->
-    <footer class="footer"></footer>
+    <footer role="contentinfo" class="footer"></footer>
     <!-- /Footer -->
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
