--- a/app/exhibition.html
+++ b/app/exhibition.html
@@ -10,12 +10,12 @@
   </head>
   <body>
     <!-- /Header -->
-    <header class="header"></header>
+    <header role="banner" class="header"></header>
     <!-- /Header -->
     <!-- /Nav -->
-    <nav class="nav"></nav>
+    <nav role="navigation" class="nav"></nav>
     <!-- /Nav -->
-    <main class="main">
+    <main role="main" class="main">
         <!-- /Bobdy -->
         <article class="sub-page-hero-x-1"></article>
         <article class="cosmology"></article>
@@ -27,7 +27,7 @@
         <!-- /Bobdy -->
     </main>
     <!-- /Footer -->
-    <footer class="footer"></footer>
+    <footer role="contentinfo" class="footer"></footer>
     <!-- /Footer -->
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
