--- a/app/index.html
+++ b/app/index.html
@@ -10,22 +10,22 @@
   </head>
   <body>
     <!-- /Header -->
-    <header role="banner" class="header"></header>
+    <header class="header"></header>
     <!-- /Header -->
     <!-- /Nav -->
-    <nav role="navigation" class="nav"></nav>
+    <nav class="nav"></nav>
     <!-- /Nav -->
     <main role="main" class="main">
       <!-- Hero -->
       <div class="hero"></div>
       <!-- /Hero -->
       <!-- Body -->
-      <article class="info-box"></article>
-      <article class="explore-for-kids"></article>
-      <article class="explore-for-teachers"></article>
-      <article class="explore-for-researchers"></article>
-      <article class="testimonial"></article>
-      <article class="signup"></article>
+      <div class="info-box"></div>
+      <div class="explore-for-kids"></div>
+      <div class="explore-for-teachers"></div>
+      <div class="explore-for-researchers"></div>
+      <div class="testimonial"></div>
+      <div class="signup"></div>
       <!-- /Body -->
     </main>
     <!-- /Footer -->
