--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
     <!-- /Nav -->
     <nav class="nav"></nav>
     <!-- /Nav -->
-    <main role="main" class="main">
+    <main class="main">
       <!-- Hero -->
       <div class="hero"></div>
       <!-- /Hero -->
@@ -29,7 +29,7 @@
       <!-- /Body -->
     </main>
     <!-- /Footer -->
-    <footer role="contentinfo" class="footer"></footer>
+    <footer class="footer"></footer>
     <!-- /Footer -->
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
