--- a/app/news.html
+++ b/app/news.html
@@ -10,23 +10,23 @@
   </head>
   <body>
     <!-- /Header -->
-    <header role="banner" class="header"></header>
+    <header class="header"></header>
     <!-- /Header -->
     <!-- /Nav -->
-    <nav role="navigation" class="nav"></nav>
+    <nav class="nav"></nav>
     <!-- /Nav -->
-    <main role="main" class="main">
+    <main class="main">
         <!-- /Bobdy -->
-        <article class="sub-page-hero-x"></article>
-        <article class="aeronautics"></article>
-        <article class="museum"></article>
-        <article class="loan"></article>
+        <div class="sub-page-hero-x"></div>
+        <div class="aeronautics"></div>
+        <div class="museum"></div>
+        <div class="loan"></div>
         <!--<sub-page-body-a class="sub-page-body-a"></sub-page-body-a>-->
-        <article class="info-box"></article>
+        <div class="info-box"></div>
         <!-- /Bobdy -->
     </main>
     <!-- /Footer -->
-    <footer role="contentinfo" class="footer"></footer>
+    <footer class="footer"></footer>
     <!-- /Footer -->
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
