--- a/app/exhibition.html
+++ b/app/exhibition.html
@@ -10,24 +10,24 @@
   </head>
   <body>
     <!-- /Header -->
-    <header role="banner" class="header"></header>
+    <header class="header"></header>
     <!-- /Header -->
     <!-- /Nav -->
-    <nav role="navigation" class="nav"></nav>
+    <nav class="nav"></nav>
     <!-- /Nav -->
-    <main role="main" class="main">
+    <main class="main">
         <!-- /Bobdy -->
-        <article class="sub-page-hero-x-1"></article>
-        <article class="cosmology"></article>
-        <article class="evolution"></article>
-        <article class="ai"></article>
-        <article class="medicine"></article>
-        <article class="ecology"></article>
-        <article class="info-box"></article>
+        <div class="sub-page-hero-x-1"></div>
+        <div class="cosmology"></div>
+        <div class="evolution"></div>
+        <div class="ai"></div>
+        <div class="medicine"></div>
+        <div class="ecology"></div>
+        <div class="info-box"></div>
         <!-- /Bobdy -->
     </main>
     <!-- /Footer -->
-    <footer role="contentinfo" class="footer"></footer>
+    <footer class="footer"></footer>
     <!-- /Footer -->
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
