--- a/app/shop.html
+++ b/app/shop.html
@@ -10,20 +10,20 @@
   </head>
   <body>
     <!-- /Header -->
-    <header role="banner" class="header"></header>
+    <header class="header"></header>
     <!-- /Header -->
     <!-- /Nav -->
-    <nav role="navigation" class="nav"></nav>
+    <nav class="nav"></nav>
     <!-- /Nav -->
-    <main role="main" class="main">
+    <main class="main">
         <!-- /Bobdy -->
-        <article class="sub-shop-hero-x-3"></article>
+        <div class="sub-shop-hero-x-3"></div>
         <div class="shop-2"></div>
-        <article class="info-box"></article>
+        <div class="info-box"></div>
         <!-- /Bobdy -->
     </main>
     <!-- /Footer -->
-    <footer role="contentinfo" class="footer"></footer>
+    <footer class="footer"></footer>
     <!-- /Footer -->
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
