--- a/app/help.html
+++ b/app/help.html
@@ -20,14 +20,35 @@
       <div class="box-container help-grid-container">
         <!--help-grid-container-->
         <div class="help-box">
-          <small
+          <!--<small
             ><i>
               Thank you for reaching out to us through the website. <br />
               We cannot wait to show you everything we have to offer.<br />
               A member of our team will follow up soon, <br />
               but please take the opportunity to learn more about us here:
             </i></small
-          >
+          >-->
+          <div class="container">
+            <div class="about-box">
+              <p>
+                Thank you for reaching out to us through the website.
+                  We cannot wait to show you everything we have to offer.
+                </br></br>
+                  A member of our team will follow up soon,
+                  but please take the opportunity to learn more about us
+                  <a href="https://angry-benz-cc2cea.netlify.app/index.html">here!</a>
+              </p>
+            </div>
+            <div class="contact-box">
+              <p>Community Science Museum Kjelsåsveien </br> 143 0491 Oslo </br></br> </p>
+              <p>Tlf:<i>22 48 03 80</i> </br>Org. nr: <i>9FML76832</i> </br></br></p>
+              <p>E-post: </br><i>post(a)csmuseum.no</i></br></br></p>
+              <p>Or fill out the contact form </br>School and kindergarten:</p>
+              <p>Epost <a href="mailto:post@csmuseum.no?cc=Suportpost@csmuseum.no,&subject=ORGANISE A GUIDED TOUR FOR SCHOOL OR KINDERGARTEN&body=1 Navn : %0D%0A2 E-post : %0D%0A3 Emne : %0D%0A4 Er det behov accessibility : %0D%0A5 Melding :">(Contact form)</a></br></br></p>
+              <p>Tlf: <i>22 48 03 80</i></p>
+              <p>Opening hours: Tir–fre kl. <i>13.15–15</i></p>
+            </div>
+          </div>
         </div>
       </div>
       <div class="info-box"></div>
