--- a/app/food_and_drink.html
+++ b/app/food_and_drink.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Food & Drink" />
-    <title>CSM | Food & Drink, There is a café attached to the museum where you can get light lunches, soft drinks,
-      coffee, snacks and more.</title>
+    <title>
+      CSM | Food & Drink, There is a café attached to the museum where you can get light lunches,
+      soft drinks, coffee, snacks and more.
+    </title>
     <link href="assets/css/main.min.css" rel="stylesheet" type="text/css" media="all" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   </head>
@@ -17,11 +19,11 @@
     <nav class="nav"></nav>
     <!-- /Nav -->
     <main class="main">
-        <!-- /Bobdy -->
-        <div class="sub-shop-hero-x-2"></div>
-        <div class="shop"></div>
-        <div class="info-box"></div>
-        <!-- /Bobdy -->
+      <!-- /Bobdy -->
+      <div class="sub-shop-hero-x-2"></div>
+      <div class="shop"></div>
+      <div class="info-box"></div>
+      <!-- /Bobdy -->
     </main>
     <!-- /Footer -->
     <footer class="footer"></footer>
